# hipFile

./: .clang-format  .clang-format-ignore  .cmakelintrc  .codespellrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  STYLEGUIDE.md  repeat_test_runs.py  run_tests.py
.github/: CODEOWNERS
cmake/: AISAddExecutable.cmake  AISAddLibraries.cmake  AISClangCompilerOptions.cmake  AISClangSafeBuffers.cmake  AISClangTidy.cmake  AISCompilerOptions.cmake  AISDocumentation.cmake  AISGNUCompilerOptions.cmake  AISGenerateInstallCTest.cmake  AISIWYU.cmake  AISInstall.cmake  AISInstallTests.cmake  AISProfiling.cmake  AISSanitizers.cmake  AISSetCoverageFile.cmake  AISUseGTest.cmake  AISUseROCmCMake.cmake  iwyu-gtest.imp  iwyu-libc.imp  lsan-suppressions.supp
docs/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Doxyfile.in  README.md  bare-metal.md  clean.sh  conf.py  config_build.rst  cuFile_API_supported_by_HIP.md  driver.rst  errors.rst  fio.rst  gds-install.md  hipify.rst  index.rst  introduction.rst  io_path.rst  rdma.rst  sanitizers.rst  stats_collection.rst
docs/api/: batch.rst  core.rst  errors.rst  file.rst
docs/doxygen/: Doxyfile.in
docs/sphinx/: README.md  _toc.yml  _toc.yml.in  conf.py  misc_api.rst  requirements.in  requirements.txt
examples/: README.md
examples/async/: CMakeLists.install.cmake  CMakeLists.txt  roundtrip-async-multi-stream-registered.cpp  roundtrip-async-multi-stream.cpp  roundtrip-async-nonblocking-stream.cpp  roundtrip-async.cpp
examples/basics/: CMakeLists.install.cmake  CMakeLists.txt  basics_common.cpp  basics_common.h  bufregister-write.cpp  iterative-devmem-offset-read.cpp  iterative-read.cpp  no-bufregister-write.cpp  no-odirect-write.cpp  roundtrip-verify.cpp  subregion-write.cpp  various-mem-rw.cpp
examples/common/: CMakeLists.install.cmake  CMakeLists.txt  examples_common.cpp  examples_common.h
hipfile/: CMakeLists.txt
hipfile/docs/: async.rst  core.rst  driver.rst  errors.rst  introduction.rst  nvidia_compat.rst
hipfile/examples/aiscp/: aiscp.cpp
hipfile/hipify/: README.md  hipfile_hipify.diff
hipfile/include/: hipfile.h  rocfile.h
hipfile/src/amd_detail/: CMakeLists.txt  async.cpp  async.h  buffer.cpp  buffer.h  configuration.h  context.cpp  context.h  environment.cpp  environment.h  file-descriptor.cpp  file-descriptor.h  file.cpp  file.h  hip.cpp  hip.h  hipfile-private.cpp  hipfile-private.h  hipfile-rocfile.cpp  hipfile-rocfile.h  hipfile.cpp  io.h  key.h  mountinfo.cpp  rocfile-private.cpp  rocfile-private.h  rocfile.cpp  state.cpp  state.h  stream.cpp  stream.h  sys.cpp  sys.h
hipfile/src/amd_detail/backend/: asyncop-fallback.cpp  asyncop-fallback.h  fallback.cpp  fallback.h  fastpath.cpp  fastpath.h
hipfile/src/amd_detail/batch/: batch.cpp  batch.h
hipfile/src/common/: hipfile-common.cpp
hipfile/src/nvidia_detail/: CMakeLists.txt  hipfile-cufile.cpp  hipfile.cpp
hipfile/test/: CMakeLists.txt  hipfile-cufile.cpp  hipfile-rocfile.cpp  main.cpp  test-common.h  test-hipfile-batch.cpp  test-hipfile.cpp
hipfile/test/amd_detail/: CMakeLists.txt  async.cpp  buffer.cpp  context.cpp  driver.cpp  fallback.cpp  fastpath.cpp  file-descriptor.cpp  handle.cpp  hipfile-test.h  mbackend.h  mbatch.h  mbuffer.h  mfile.h  mhip.h  misc.cpp  mmountinfo.h  mountinfo.cpp  mstate.h  mstream.h  msys.h  rocfile-test.h  rocfile.cpp  state_mt.cpp  stream.cpp
hipfile/test/amd_detail/batch/: batch.cpp  batch_mt.cpp
hipfile/test/common/: magic-word.h  test-common.h  test-options.h
hipfile/test/legacy/: test-hipfile.cpp
hipfile/test/system/: buffer.cpp  config.cpp  driver.cpp  main.cpp  system.cpp  version.cpp
include/: hipfile-api-trace.h  hipfile.h  hipfile_api_trace.h
python/: CMakeLists.txt  README.md  main.py  pyproject.toml
python/examples/: pytorch_example.py
python/hipfile/: __init__.py  _chipfile.pxd  _hipfile.pyx  bindings.py  buffer.py  driver.py  enums.py  error.py  file.py  hipMalloc.py  hipfile.py  properties.py
python/tests/: conftest.py  test_hipfile.py  test_lmcache_integration.py
rocfile/: CMakeLists.txt
rocfile/docs/: async.rst  batch.rst  config_build.rst  core.rst  driver.rst  errors.rst  file.rst  introduction.rst  nvidia_compat.rst  rdma.rst
rocfile/include/: rocfile.h
rocfile/src/: CMakeLists.txt  async.cpp  async.h  backend.h  buffer.cpp  buffer.h  context.cpp  context.h  file.cpp  file.h  hip.cpp  hip.h  io.h  mountinfo.cpp  mountinfo.h  rocfile-private.cpp  rocfile-private.h  rocfile.cpp  state.cpp  state.h  stream.cpp  stream.h  sys.cpp  sys.h
rocfile/src/backend/: asyncop-fallback.cpp  asyncop-fallback.h  fallback.cpp  fallback.h  fastpath.cpp  fastpath.h
rocfile/src/batch/: batch.cpp  batch.h
rocfile/test/: CMakeLists.txt  async.cpp  buffer.cpp  context.cpp  driver.cpp  fallback.cpp  fastpath.cpp  handle.cpp  hip.cpp  io.cpp  mbackend.h  mbatch.h  mbuffer.h  mfile.h  mhip.h  misc.cpp  mmountinfo.h  mountinfo.cpp  mstate.h  mstream.h  msys.h  rocfile-test.h  rocfile.cpp  state_mt.cpp  stream.cpp
rocfile/test/batch/: batch.cpp  batch_mt.cpp
shared/: hipfile-cpp20.h  hipfile-literals.h  hipfile-sanitizer.h  hipfile-types.h  invalid-enum.h  (+3 more)
test/: CMakeLists.txt  README.md
test/amd_detail/: CMakeLists.txt  api_trace.cpp  async.cpp  backend.cpp  buffer.cpp  configuration.cpp  context.cpp  driver.cpp  environment.cpp  fallback.cpp  fastpath.cpp  file-descriptor.cpp  handle.cpp  hip.cpp  hipfile-api.cpp  hipfile-stats.cpp  hipfile-test.h  main.cpp  masyncmonitor.h  mbackend.h  mbatch.h  mbuffer.h  mconfiguration.h  mfile.h  mhip.h  mmountinfo.h  mountinfo.cpp  mstate.h  mstats.h  mstream.h  msys.h  state_mt.cpp  stats.cpp  stream.cpp
test/amd_detail/batch/: batch.cpp  batch_mt.cpp
test/common/: invalid-enum.h  test-common.h  test-options.h  test-shared-fixtures.h
test/legacy/: test-hipfile-batch.cpp
test/nvidia_detail/: cufile-api-compat.cpp
test/system/: async.cpp  buffer.cpp  config.cpp  driver.cpp  fastpath.cpp  io.cpp  main.cpp  main.h  version.cpp
test/system/amd/: io.cpp
(+125 files in other folders)
