[build-system]
requires = ["scikit-build-core>=0.10", "cython>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "hipfile"
version = "0.2.0"
description = "Low-level Python bindings for hipFile (direct-to-GPU IO)"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["hipfile"]
